@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.7.0 (**svn**)
+* Fixed Unicode decode/encoding of path_info dynamic/wildcard parts so that
+  PATH_INFO will stay a raw string as it should. Fixes #51.
 * Fixed url_for (thus redirect_to) to throw an exception if a Unicode
   string is returned as that's an invalid URL. Fixes #46.
 * Fixed Routes middleware to only parse POST's if the content type is
